// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastTest render: render content 1`] = `
<div
  aria-live="polite"
>
  <div
    class="ms-fadeIn100 toast"
  >
    hello world
  </div>
</div>
`;

exports[`ToastTest render: render nothing before show() is called 1`] = `
<div
  aria-live="polite"
/>
`;
